# policy-explainer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: health_ipd.txt
scripts/: pdf_extraction.py
src/policy_explainer/: __init__.py  app.py  prompts.py
