[project]
name = "policy-explainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "domchao", email = "d.chaopradith@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]
